--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,7 @@
         </div>
     </nav>
 
+    <!--SLIDE-->
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -49,8 +50,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active left">
-                <img data-src="holder.js/1200x500/auto/#777:#777" alt="1200x500" style="width: 100%; height: 500px;"
-                     src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%221200%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%201200%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584ed7f5ae%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A45pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584ed7f5ae%22%3E%3Crect%20width%3D%221200%22%20height%3D%22500%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22334.12000015258789%22%20y%3D%22270.4%22%3E1200x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                <img src="images/shutterstock_111119858.jpg" class="img-fluid"
                      data-holder-rendered="true">
                 <div class="carousel-caption">
                     <h3>First slide label</h3>
@@ -58,8 +58,7 @@
                 </div>
             </div>
             <div class="carousel-item next left">
-                <img data-src="holder.js/1200x500/auto/#666:#666" alt="1200x500" style="width: 100%; height: 500px;"
-                     src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%221200%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%201200%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584ed7f5b6%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A45pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584ed7f5b6%22%3E%3Crect%20width%3D%221200%22%20height%3D%22500%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22334.12000015258789%22%20y%3D%22270.4%22%3E1200x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                <img src="images/shutterstock_185618411.jpg" class="img-fluid"
                      data-holder-rendered="true">
                 <div class="carousel-caption">
                     <h3>Second slide label</h3>
@@ -67,8 +66,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img data-src="holder.js/1200x500/auto/#555:#555" alt="1200x500" style="width: 100%; height: 500px;"
-                     src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%221200%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%201200%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584ed7f5bc%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A45pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584ed7f5bc%22%3E%3Crect%20width%3D%221200%22%20height%3D%22500%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22334.12000015258789%22%20y%3D%22270.4%22%3E1200x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                <img src="images/shutterstock_302508602.jpg" class="img-fluid"
                      data-holder-rendered="true">
                 <div class="carousel-caption">
                     <h3>Third slide label</h3>
@@ -86,15 +84,16 @@
         </a>
     </div>
 
+    <!--CARDS-->
     <div class="container"><hr>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
                 <div class="card-deck">
                     <div class="card">
-                        <div class="card-block">
-                            <h5 class="card-title">Plataforma para Emisión de Facturación Electrónica CFDI.</h5>
+                        <div class="card-block bg-blue">
+                            <h5 class="card-title text-white">Plataforma para Emisión de Facturación Electrónica CFDI.</h5>
                         </div>
-                        <img class="card-img-top img-fluid" data-src="holder.js/100px160/" alt="100%x160" style="height: 160px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22242%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20242%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584f028676%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A12pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584f028676%22%3E%3Crect%20width%3D%22242%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2290.29999923706055%22%20y%3D%2285.7%22%3E242x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+                        <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard.png" data-holder-rendered="true">
                         <div class="card-block">
                             <p class="card-text">Genera y Envía cualquier CFDI como Facturas, Recibos de honorarios, Recibos de arrendamiento, Notas de crédito, Recibos de donativos, Carta porte, etc.  CONOCENOS.</p>
                             <div class="text-lg-right text-md-right text-xs-right">
@@ -107,10 +106,10 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
                 <div class="card-deck">
                     <div class="card">
-                        <div class="card-block">
-                            <h5 class="card-title">Plataforma para Emisión de Recibos de Nómina.</h5>
+                        <div class="card-block bg-blue">
+                            <h5 class="card-title text-white">Plataforma para Emisión de Recibos de Nómina.</h5>
                         </div>
-                        <img class="card-img-top img-fluid" data-src="holder.js/100px160/" alt="100%x160" style="height: 160px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22242%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20242%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584f028676%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A12pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584f028676%22%3E%3Crect%20width%3D%22242%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2290.29999923706055%22%20y%3D%2285.7%22%3E242x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+                        <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard2.JPG" data-holder-rendered="true">
                         <div class="card-block">
                             <p class="card-text">Genera recibos de nomina y recibos de asimilados a salarios. Con tu base de datos de puestos y trabajadores, genera la nomina de cada periodo y envía los recibos de nomina por correo electrónico a tus empleados.</p>
                             <div class="text-lg-right text-md-right text-xs-right">
@@ -123,10 +122,10 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
                 <div class="card-deck">
                     <div class="card">
-                        <div class="card-block">
-                            <h5 class="card-title">Plataforma  de Punto de Venta Multitareas.</h5>
+                        <div class="card-block bg-blue">
+                            <h5 class="card-title text-white">Plataforma  de Punto de Venta Multitareas.</h5>
                         </div>
-                        <img class="card-img-top img-fluid" data-src="holder.js/100px160/" alt="100%x160" style="height: 160px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22242%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20242%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584f028676%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A12pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584f028676%22%3E%3Crect%20width%3D%22242%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2290.29999923706055%22%20y%3D%2285.7%22%3E242x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+                        <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard.png" data-holder-rendered="true">
                         <div class="card-block">
                             <p class="card-text">Nuestro sistema POS esta desarrollado específicamente  para atender necesidades puntuales como por ejemplo control de ventas e inventarios, reportes administrativos,   adaptándose  de manera amigable a diferentes sectores por ejemplo , tiendas departamentales , abarrotes , refaccionarias, etc.</p>
                             <div class="text-lg-right text-md-right text-xs-right">
@@ -140,10 +139,10 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
                 <div class="card-deck">
                     <div class="card">
-                        <div class="card-block">
-                            <h5 class="card-title">Integración de ADDENDAS.</h5>
+                        <div class="card-block bg-blue">
+                            <h5 class="card-title text-white">Integración de ADDENDAS.</h5>
                         </div>
-                        <img class="card-img-top img-fluid" data-src="holder.js/100px160/" alt="100%x160" style="height: 160px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22242%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20242%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584f028676%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A12pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584f028676%22%3E%3Crect%20width%3D%22242%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2290.29999923706055%22%20y%3D%2285.7%22%3E242x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+                        <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard3.jpg" data-holder-rendered="true">
                         <div class="card-block">
                             <p class="card-text">en DN9 Soluciones contamos con el desarrollo e implementación de Adendas, Para efectos de la emisión de Comprobantes Fiscales Digitales o Facturación Electrónica, una addenda es un apéndice o elemento adicional, permitido por el Servicio de Administración Tributaria SAT con la finalidad de ....</p>
                             <div class="text-lg-right text-md-right text-xs-right">
@@ -156,12 +155,12 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
                 <div class="card-deck">
                     <div class="card">
-                        <div class="card-block">
-                            <h5 class="card-title">Integración de Facturación Electrónica con cualquier ERP.</h5>
+                        <div class="card-block bg-blue">
+                            <h5 class="card-title text-white">Integración de Fac E con cualquier ERP.</h5>
                         </div>
-                        <img class="card-img-top img-fluid" data-src="holder.js/100px160/" alt="100%x160" style="height: 160px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22242%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20242%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584f028676%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A12pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584f028676%22%3E%3Crect%20width%3D%22242%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2290.29999923706055%22%20y%3D%2285.7%22%3E242x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+                        <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard3.jpg" data-holder-rendered="true">
                         <div class="card-block">
-                            <p class="card-text">Los sistemas de recepción e integración de facturas electrónicas de EDICOM, habilitan protocolos de verificación de firmas que garantizan el origen, integridad y autenticidad de todos los documentos recibidos.Tras una validación sintáctica del documento recepcionado se verifica la existencia de todos los datos mínimos requeridos, y la adecuación del documento con sus correspondientes addendas.</p>
+                            <p class="card-text">Los sistemas de recepción e integración de facturas electrónicas de EDICOM, habilitan protocolos de verificación de firmas que garantizan el origen, integridad y autenticidad de todos los documentos recibidos.Tras una validación sintáctica del documento recepcionado.</p>
                             <div class="text-lg-right text-md-right text-xs-right">
                                 <a href="#" class="btn btn-success">Leer más...</a>
                             </div>
@@ -172,10 +171,10 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
                 <div class="card-deck">
                     <div class="card">
-                        <div class="card-block">
-                            <h5 class="card-title">Desarrollo de Sistemas Personalizados.</h5>
+                        <div class="card-block bg-blue">
+                            <h5 class="card-title text-white">Desarrollo de Sistemas Personalizados.</h5>
                         </div>
-                        <img class="card-img-top img-fluid" data-src="holder.js/100px160/" alt="100%x160" style="height: 160px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22242%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20242%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1584f028676%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A12pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1584f028676%22%3E%3Crect%20width%3D%22242%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2290.29999923706055%22%20y%3D%2285.7%22%3E242x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+                        <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard3.jpg" data-holder-rendered="true">
                         <div class="card-block">
                             <p class="card-text">DN9 Soluciones Informáticas de México, S.A. de C.V. es una empresa con 15 años de experiencia en el desarrollo de software personalizados a la medida de cada cliente cubriendo todas y cada cada una de sus necesidades.</p>
                             <div class="text-lg-right text-md-right text-xs-right">
