--- a/web/index.html
+++ b/web/index.html
@@ -90,15 +90,15 @@
         <!--BUTTONS-->
         <div class="container">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <button type="button" class="btn btn-success btn-lg btn-block">Acceso al Sistema de Facturación</button><br>
+                <a class="btn btn-success btn-lg btn-block"><span class="text-white">Sistema de Facturación</span></a><br>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <button type="button" class="btn btn-success btn-lg btn-block">Acceso al Sistema de Nómina</button><br>
+                <a class="btn btn-success btn-lg btn-block"><span class="text-white">Sistema de Nómina</span></a><br>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <button type="button" class="btn btn-success btn-lg btn-block">Acceso al Sistema de POS</button><br>
+                <a class="btn btn-success btn-lg btn-block"><span class="text-white">Sistema de POS</span></a>
             </div>
-        </div><hr>
+        </div><br>
         <!--CARDS-->
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
