--- a/web/index.html
+++ b/web/index.html
@@ -21,8 +21,9 @@
     </nav>
     <nav class="navbar navbar-light bg-faded navbar-fixed-top second-nav">
         <button class="navbar-toggler hidden-lg-up float-sm-right float-xs-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"></button>
-        <div class="collapse navbar-toggleable-md" id="navbarResponsive">
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        </button>
+        <div class="collapse navbar-toggleable-md container" id="navbarResponsive">
             <ul class="nav navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="#">Dn9</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
