Cambios en index segun jorge

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
         </button>
         <div class="collapse navbar-toggleable-md container" id="navbarResponsive">
             <ul class="nav navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">Dn9</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#">Dn9</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Preguntas Fecuentes</a></li>
@@ -109,9 +109,9 @@
                             <h5 class="card-title text-white">Plataforma para Emisión de Facturación Electrónica CFDI.</h5>
                         </div>
                         <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard.png" data-holder-rendered="true">
-                        <div class="card-block">
+                        <div class="card-block" style="height: 300px">
                             <p class="card-text">Genera y Envía cualquier CFDI como Facturas, Recibos de honorarios, Recibos de arrendamiento, Notas de crédito, Recibos de donativos, Carta porte, etc.  CONOCENOS.</p>
-                            <div class="text-lg-right text-md-right text-xs-right">
+                            <div class="text-lg-right text-md-right text-xs-right" style="padding-top: 90px">
                                 <a href="#" class="btn btn-success">Leer más...</a>
                             </div>
                         </div>
@@ -125,9 +125,9 @@
                             <h5 class="card-title text-white">Plataforma para Emisión de Recibos de Nómina.</h5>
                         </div>
                         <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard2.JPG" data-holder-rendered="true">
-                        <div class="card-block">
+                        <div class="card-block" style="height: 300px">
                             <p class="card-text">Genera recibos de nomina y recibos de asimilados a salarios. Con tu base de datos de puestos y trabajadores, genera la nomina de cada periodo y envía los recibos de nomina por correo electrónico a tus empleados.</p>
-                            <div class="text-lg-right text-md-right text-xs-right">
+                            <div class="text-lg-right text-md-right text-xs-right" style="padding-top: 70px">
                                 <a href="#" class="btn btn-success">Leer más...</a>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                             <h5 class="card-title text-white">Plataforma  de Punto de Venta Multitareas.</h5>
                         </div>
                         <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard.png" data-holder-rendered="true">
-                        <div class="card-block">
+                        <div class="card-block" style="height: 300px">
                             <p class="card-text">Nuestro sistema POS esta desarrollado específicamente  para atender necesidades puntuales como por ejemplo control de ventas e inventarios, reportes administrativos,   adaptándose  de manera amigable a diferentes sectores por ejemplo , tiendas departamentales , abarrotes , refaccionarias, etc.</p>
                             <div class="text-lg-right text-md-right text-xs-right">
                                 <a href="#" class="btn btn-success">Leer más...</a>
@@ -158,9 +158,9 @@
                             <h5 class="card-title text-white">Integración de ADDENDAS.</h5>
                         </div>
                         <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard3.jpg" data-holder-rendered="true">
-                        <div class="card-block">
+                        <div class="card-block" style="height: 330px">
                             <p class="card-text">en DN9 Soluciones contamos con el desarrollo e implementación de Adendas, Para efectos de la emisión de Comprobantes Fiscales Digitales o Facturación Electrónica, una addenda es un apéndice o elemento adicional, permitido por el Servicio de Administración Tributaria SAT con la finalidad de ....</p>
-                            <div class="text-lg-right text-md-right text-xs-right">
+                            <div class="text-lg-right text-md-right text-xs-right" style="padding-top: 20px">
                                 <a href="#" class="btn btn-success">Leer más...</a>
                             </div>
                         </div>
@@ -190,9 +190,9 @@
                             <h5 class="card-title text-white">Desarrollo de Sistemas Personalizados.</h5>
                         </div>
                         <img class="card-img-top img-fluid" style="height: 160px; width: 100%; display: block;" src="images/imgcard3.jpg" data-holder-rendered="true">
-                        <div class="card-block">
+                        <div class="card-block" style="height: 300px">
                             <p class="card-text">DN9 Soluciones Informáticas de México, S.A. de C.V. es una empresa con 15 años de experiencia en el desarrollo de software personalizados a la medida de cada cliente cubriendo todas y cada cada una de sus necesidades.</p>
-                            <div class="text-lg-right text-md-right text-xs-right">
+                            <div class="text-lg-right text-md-right text-xs-right" style="padding-top: 42px">
                                 <a href="#" class="btn btn-success">Leer más...</a>
                             </div>
                         </div>
