--- a/web/costos.html
+++ b/web/costos.html
@@ -47,7 +47,47 @@
     </nav>
 
     <div class="container bg-white">
-        <h1 class="text-info text-lg-center ">Paquetes de Folios</h1>
+        <h1 class="text-black text-sm-center text-md-center text-lg-center text-xl-center">Paquetes de Folios</h1>
+
+
+        <div class="row text-sm-center text-md-center text-lg-center text-xl-center">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay01.jpg" class="img-thumbnail"></a>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay02.jpg" class="img-thumbnail"></a>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay03.jpg" class="img-thumbnail"></a>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay04.jpg" class="img-thumbnail"></a>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay05.jpg" class="img-thumbnail"></a>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay06.jpg" class="img-thumbnail"></a>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay07.jpg" class="img-thumbnail"></a>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay08.jpg" class="img-thumbnail"></a>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay09.jpg" class="img-thumbnail"></a>
+            </div>
+        </div>
+
     </div>
 </div>
 
