--- a/web/herramientas.html
+++ b/web/herramientas.html
@@ -47,7 +47,69 @@
     </nav>
 
     <div class="container bg-white">
-        <h1 class="text-info text-lg-center ">Herramientas</h1>
+        <h1 class="text-black text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">Herramientas</h1>
+
+        <div class="row">
+            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-3 col-xs-3">
+                <img class="img-fluid" src="images/SAT.PNG">
+                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                    <h5 class="card-title">Tramites y Servicios SAT</h5>
+                    <a href="http://www.siat.sat.gob.mx/" target="_blank" class="btn btn-primary">Ir a...</a>
+                </div>
+            </div>
+
+            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-3 col-xs-3">
+                <img class="img-fluid" src="images/SAT.PNG">
+                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                    <h5 class="card-title">Portal de  Contribuyentes</h5>
+                    <a href="https://cfdiau.sat.gob.mx/nidp/app/login?id=SATUPCFDiCon&sid=0&option=credential&sid=0" target="_blank" class="btn btn-primary">Ir a...</a>
+                </div>
+            </div>
+
+            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-3 col-xs-3">
+                <img class="img-fluid" src="images/SAT.PNG">
+                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                    <h5 class="card-title" style="padding-top: 20px">Cambio de Dolar 2016</h5>
+                    <a href="http://www.sat.gob.mx/informacion_fiscal/tablas_indicadores/Paginas/tipo_cambio.aspx" target="_blank" class="btn btn-primary">Ir a...</a>
+                </div>
+            </div>
+
+            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-3 col-xs-3">
+                <img class="img-fluid" src="images/SAT.PNG">
+                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                    <h5 class="card-title" style="padding-top: 20px">INPC 2016</h5>
+                    <a href="http://www.sat.gob.mx/informacion_fiscal/tablas_indicadores/Paginas/inpc_2016.aspx" target="_blank" class="btn btn-primary">Ir a...</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <img class="img-fluid" src="images/imss.png">
+                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                    <h5 class="card-title">Asignación de NSS IMSS</h5>
+                    <a href="http://serviciosdigitales.imss.gob.mx/" target="_blank" class="btn btn-primary">Ir a...</a>
+                </div>
+            </div>
+
+            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <img class="img-fluid" src="images/curp-logo_1.jpg">
+                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                    <h5 class="card-title">Calcula tu Curp</h5>
+                    <a href="https://consultas.curp.gob.mx/CurpSP/" target="_blank" class="btn btn-primary">Ir a...</a>
+                </div>
+            </div>
+
+            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
+                <img class="img-fluid" src="images/infonavit.png">
+                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                    <h5 class="card-title" style="padding-top: 40px">INFONAVIT</h5>
+                    <a href="http://portal.infonavit.org.mx/wps/wcm/connect/infonavit/inicio" target="_blank" class="btn btn-primary">Ir a...</a>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
 
