--- a/web/contacto.html
+++ b/web/contacto.html
@@ -49,26 +49,31 @@
     <div class="container bg-white">
         <h1>Contáctanos</h1>
         <h4>Agradecemos tu interés en nuestros servicios. </h4>
-        <form>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Nombre">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Email">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Telefono">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Asunto">
-            </div>
-            <div class="form-group">
-                <textarea class="form-control" placeholder="¿Que servicio te interesa?" rows="4"></textarea>
-            </div>
-            <div class="text-lg-right text-md-right text-xs-right">
-                <button type="button" class="btn btn-success">Enviar</button>
-            </div>
-        </form><hr>
+        <div class="col-md-9">
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Nombre">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Telefono">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Asunto">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" placeholder="¿Que servicio te interesa?" rows="4"></textarea>
+                </div>
+                <div class="text-lg-right text-md-right text-xs-right">
+                    <button type="button" class="btn btn-success">Enviar</button>
+                </div>
+            </form><hr>
+        </div>
+        <div class="col-md-3 text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+            <img src="images/servicio-tecnico.jpg" class="img-fluid">
+        </div>
     </div>
 </div>
 
