--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
         </a>
         <span class="navbar-brand float-md-right align-bottom align-text-bottom hidden-sm-down">Soporte Técnico  01800 4567 6789</span>
     </nav>
-    <nav class="navbar navbar-light bg-faded navbar-fixed-top second-nav">
+    <nav class="navbar navbar-dark bg-blue navbar-fixed-top second-nav">
         <button class="navbar-toggler hidden-lg-up float-sm-right float-xs-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         </button>
@@ -55,37 +55,39 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active left">
-                <img src="images/shutterstock_111119858.jpg" class="img-fluid"
-                     data-holder-rendered="true">
+                <img src="images/shutterstock_111119858.jpg" class="img-fluid" data-holder-rendered="true">
                 <div class="carousel-caption">
-                    <h3>First slide label</h3>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    <div class="alert bg-blue" role="alert">
+                        FACTURACIÓN ELECTRÓNICA<br>para todos
+                    </div>
                 </div>
             </div>
             <div class="carousel-item next left">
-                <img src="images/shutterstock_185618411.jpg" class="img-fluid"
-                     data-holder-rendered="true">
+                <img src="images/shutterstock_185618411.jpg" class="img-fluid" data-holder-rendered="true">
                 <div class="carousel-caption">
-                    <h3>Second slide label</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="alert bg-blue" role="alert">
+                        El Cálculo y Emisión de<br>
+                        NÓMINA Más Rápido , Eficiente y Seguro.
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="images/shutterstock_302508602.jpg" class="img-fluid"
-                     data-holder-rendered="true">
+                <img src="images/shutterstock_302508602.jpg" class="img-fluid" data-holder-rendered="true">
                 <div class="carousel-caption">
-                    <h3>Third slide label</h3>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    <div class="carousel-caption">
+                        <div class="alert bg-blue" role="alert">
+                            Integración SEGURA con ERP´S y <br>
+                            Desarrollo de Sistemas PERSONALIZADOS.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
             <span class="icon-prev" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
         </a>
         <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
             <span class="icon-next" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
         </a>
     </div>
 
