--- a/web/preguntas.html
+++ b/web/preguntas.html
@@ -20,7 +20,7 @@
         </a>
         <span class="navbar-brand float-md-right align-bottom align-text-bottom hidden-sm-down">Soporte Técnico  01800 4567 6789</span>
     </nav>
-    <nav class="navbar navbar-light bg-faded navbar-fixed-top second-nav">
+    <nav class="navbar navbar-dark bg-blue navbar-fixed-top second-nav">
         <button class="navbar-toggler hidden-lg-up float-sm-right float-xs-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         </button>
