Camios antes de info

--- a/web/costos.html
+++ b/web/costos.html
@@ -48,44 +48,44 @@
     </nav>
 
     <div class="container bg-white">
-        <h1 class="text-black text-sm-center text-md-center text-lg-center text-xl-center">Paquetes de Folios</h1>
+        <h1 class="text-black text-sm-center text-md-center text-lg-center text-xl-center text-primary">Paquetes de Folios</h1>
 
 
         <div class="row text-sm-center text-md-center text-lg-center text-xl-center">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay01.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay01.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay02.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay02.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay03.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay03.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay04.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay04.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay05.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay05.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay06.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay06.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay07.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay07.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay08.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay08.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4">
-                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay09.jpg" class="img-thumbnail"></a>
+                <a href="https://www.paypal.com/mx/home" target="_blank"><img src="images/costpay09.jpg" class="img-thumbnail" style="border: 0;"></a>
             </div>
         </div>
 
@@ -164,5 +164,26 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/tether.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<!--Start of Zopim Live Chat Script-->
+<script type="text/javascript">
+    window.$zopim || (function (d, s) {
+        var z = $zopim = function (c) {
+            z._.push(c)
+        }, $ = z.s =
+            d.createElement(s), e = d.getElementsByTagName(s)[0];
+        z.set = function (o) {
+            z.set._.push(o)
+        };
+        z._ = [];
+        z.set._ = [];
+        $.async = !0;
+        $.setAttribute('charset', 'utf-8');
+        $.src = '//v2.zopim.com/?332llAu43dc9CbNbrGqiKzDHc7Np7Wko';
+        z.t = +new Date;
+        $.type = 'text/javascript';
+        e.parentNode.insertBefore($, e)
+    })(document, 'script');
+</script>
+<!--End of Zopim Live Chat Script-->
 </body>
 </html>
