--- a/web/infocfdi.html
+++ b/web/infocfdi.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Herramientas</title>
+    <title>DN9 Soluciones</title>
 </head>
 <body>
 
@@ -40,7 +40,7 @@
                         <a class="dropdown-item" href="#">Sistema de POS</a>
                     </div>
                 </li>
-                <li class="nav-item"><a class="nav-link active" href="herramientas.html">Herramientas</a></li>
+                <li class="nav-item"><a class="nav-link" href="herramientas.html">Herramientas</a></li>
                 <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                 <li class="nav-item"><a class="nav-link" href="clientes.html">Clientes</a></li>
             </ul>
@@ -48,70 +48,10 @@
     </nav>
 
     <div class="container bg-white">
-        <h1 class="text-black text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">Herramientas</h1>
-
-        <div class="row">
-            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-3 col-xs-3" style="border: 0;">
-                <img class="img-fluid" src="images/SAT.PNG" width="150">
-                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                    <h5 class="card-title">Tramites y Servicios SAT</h5>
-                    <a href="http://www.siat.sat.gob.mx/" target="_blank" class="btn btn-primary" style="margin-top: 20px">Ir a...</a>
-                </div>
-            </div>
-
-            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-3 col-xs-3" style="border: 0;">
-                <img class="img-fluid" src="images/SAT.PNG" width="150">
-                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                    <h5 class="card-title">Portal de  Contribuyentes</h5>
-                    <a href="https://cfdiau.sat.gob.mx/nidp/app/login?id=SATUPCFDiCon&sid=0&option=credential&sid=0" target="_blank" class="btn btn-primary">Ir a...</a>
-                </div>
-            </div>
-
-            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-3 col-xs-3" style="border: 0;">
-                <img class="img-fluid" src="images/SAT.PNG" width="150">
-                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                    <h5 class="card-title" style="padding-top: 20px">Cambio de Dolar 2016</h5>
-                    <a href="http://www.sat.gob.mx/informacion_fiscal/tablas_indicadores/Paginas/tipo_cambio.aspx" target="_blank" class="btn btn-primary">Ir a...</a>
-                </div>
-            </div>
-
-            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-3 col-xs-3" style="border: 0;">
-                <img class="img-fluid" src="images/SAT.PNG" width="150">
-                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                    <h5 class="card-title" style="padding-top: 20px">INPC 2016</h5>
-                    <a href="http://www.sat.gob.mx/informacion_fiscal/tablas_indicadores/Paginas/inpc_2016.aspx" target="_blank" class="btn btn-primary">Ir a...</a>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="row">
-            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4" style="border: 0;">
-                <img class="img-fluid" src="images/imss.png" width="150">
-                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                    <h5 class="card-title">Asignación de NSS IMSS</h5>
-                    <a href="http://serviciosdigitales.imss.gob.mx/" target="_blank" class="btn btn-primary">Ir a...</a>
-                </div>
-            </div>
-
-            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4" style="border: 0;">
-                <img class="img-fluid" src="images/curp-logo_1.jpg" width="150">
-                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                    <h5 class="card-title">Calcula tu Curp</h5>
-                    <a href="https://consultas.curp.gob.mx/CurpSP/" target="_blank" class="btn btn-primary">Ir a...</a>
-                </div>
-            </div>
-
-            <div class="card col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xs-4" style="border: 0;">
-                <img class="img-fluid" src="images/infonavit.png" width="150">
-                <div class="card-block text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                    <h5 class="card-title" style="padding-top: 40px">INFONAVIT</h5>
-                    <a href="http://portal.infonavit.org.mx/wps/wcm/connect/infonavit/inicio" target="_blank" class="btn btn-primary">Ir a...</a>
-                </div>
-            </div>
-
-        </div>
+        <h1 class="text-primary">CFDI</h1>
+        <diV style="height: 800px"/>
     </div>
+
 </div>
 
 <!--FOOTER-->
