--- a/web/contacto.html
+++ b/web/contacto.html
@@ -49,14 +49,14 @@
 
     <div class="container bg-white">
         <h1>Contáctanos</h1>
-        <h4>Agradecemos tu interés en nuestros servicios. </h4>
+        <h4>Agradecemos tu interés en nuestros servicios. </h4><hr>
         <div class="col-md-9">
             <form>
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Nombre">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Email">
+                    <input type="text" class="form-control" placeholder="Correo">
                 </div>
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Telefono">
@@ -65,10 +65,21 @@
                     <input type="text" class="form-control" placeholder="Asunto">
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" placeholder="¿Que servicio te interesa?" rows="4"></textarea>
+                    <label for="interes" class="text-gray-dark">Servicio de Interes:</label>
+                    <select class="form-control" id="interes">
+                        <option>Facturación Electrónica</option>
+                        <option>Emisión de Nómina</option>
+                        <option>Desarrollo de Sistema Personalizado</option>
+                        <option>Desarrollo de páginas Web Responsivas</option>
+                        <option>Mantenimiento de Equipo de Computo (PC y Apple)</option>
+                        <option>Reparación de Equipos Apple (Macbook , Iphone, Ipad, Ipod,etc.)</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" placeholder="Comentarios" rows="4"></textarea>
                 </div>
                 <div class="text-lg-right text-md-right text-xs-right">
-                    <button type="button" class="btn btn-success">Enviar</button>
+                    <button type="button" class="btn btn-success" onclick="alert('Gracias por tu solicitud de Información en breve nos pondremos en contacto contigo, saludos.')">Enviar</button>
                 </div>
             </form><hr>
         </div>
@@ -150,5 +161,26 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/tether.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<!--Start of Zopim Live Chat Script-->
+<script type="text/javascript">
+    window.$zopim || (function (d, s) {
+        var z = $zopim = function (c) {
+            z._.push(c)
+        }, $ = z.s =
+            d.createElement(s), e = d.getElementsByTagName(s)[0];
+        z.set = function (o) {
+            z.set._.push(o)
+        };
+        z._ = [];
+        z.set._ = [];
+        $.async = !0;
+        $.setAttribute('charset', 'utf-8');
+        $.src = '//v2.zopim.com/?332llAu43dc9CbNbrGqiKzDHc7Np7Wko';
+        z.t = +new Date;
+        $.type = 'text/javascript';
+        e.parentNode.insertBefore($, e)
+    })(document, 'script');
+</script>
+<!--End of Zopim Live Chat Script-->
 </body>
 </html>
