--- a/web/costos.html
+++ b/web/costos.html
@@ -37,7 +37,7 @@
                     <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
                         <a class="dropdown-item" href="#">Sistema de facturación</a>
                         <a class="dropdown-item" href="#">Sistema de Nómina</a>
-                        <a class="dropdown-item" href="#">Sistema de POS</a>
+                        <a class="dropdown-item" href="pos.html">Sistema de POS</a>
                     </div>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="herramientas.html">Herramientas</a></li>
