--- a/web/pos.html
+++ b/web/pos.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Nosotros</title>
+    <title>DN9 Soluciones</title>
 </head>
 <body>
 
@@ -28,7 +28,7 @@
         <div class="collapse navbar-toggleable-md container" id="navbarResponsive">
             <ul class="nav navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html">Dn9</a></li>
-                <li class="nav-item"><a class="nav-link active" href="nosotros.html">Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
                 <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
                 <li class="nav-item"><a class="nav-link" href="preguntas.html">Preguntas Fecuentes</a></li>
                 <li class="nav-item"><a class="nav-link" href="costos.html">Costos CFDI</a></li>
@@ -47,42 +47,10 @@
         </div>
     </nav>
 
-    <div class="container bg-white">
-        <h1>Nosotros</h1><hr>
-        <p class="text-justify">
-            Somos un grupo de profesionales con más de 15 años de experiencia en el desarrollo de aplicaciones seguras, especializándonos en sistemas de seguridad, PKI (Public Key Infrastructure) y manejo de datos.
-        </p>
-        <p class="text-justify">
-            En 2008 formamos una empresa totalmente mexicana <strong>(DN9 Soluciones Informáticas de México , S.A. de C.V.)</strong> que cubría las necesidades de infraestructura y software para atender clientes del sector financiero y de servicios informáticos.
-        </p>
-        <p class="text-justify">
-            A partir del año 2009, al ver la necesidad del mercado de consultores y desarrolladores especializados en <strong>Factura Electrónica CFDI</strong>, y de esta manera decidimos combinar nuestros conocimientos de estándares de criptografía y arquitectura de sistemas con la generación de documentos XML para proporcionar una consultoría integral a las empresas dedicadas a este ramo.
-        </p>
-        <p class="text-justify">
-            En 2015, decidimos separar el área de desarrollo de Software para constituir una nueva empresa dedicada exclusivamente a la consultoría, venta y desarrollo a la medida de productos de Software optimizado para mantener la seguridad, confiabilidad e integridad de la información sin afectar la disponibilidad y tiempos de respuesta de los servicios.
-            ​</p>
-        <p class="text-justify">
-            En DN9 Soluciones  , diseñamos , creamos e implementamos soluciones innovadoras en TI , ocupando herramientas de vanguardia , metodologías comprobadas y estándares internacionales , presentando nuestro desarrollo de software en 3 divisiones :
-        </p>            ​
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="//pos-dorm4966.cloudapp.net/Facturacion/Login.wgx" allowfullscreen></iframe>
+    </div>
 
-        <p class="text-justify">
-            Desarrollo de sistemas a la medida</p>
-        <p class="text-justify">
-            Mantenimiento a sistemas correctivo , evolutivo y preventivo.</p>
-        <p class="text-justify">
-            Integración de Sistemas Desarrollo de aplicaciones financieras</p>
-        <p class="text-justify">
-            Desarrollo de drivers para scanners de cheques , depósitos remotos , firma electrónica .</p>
-        <p class="text-justify">
-            Desarrollo de aplicaciones distribuidas seguras (WCF) Servicios administrados de sistemas.</p>
-        <p class="text-justify">
-            Soporte y mantenimiento de aplicaciones incluyendo Planeación , definición , diseño , construcción , pruebas e implementación.</p>
-        <p class="text-justify">
-            Nuestro equipo de trabajo está certificado en las mejores tecnologías y continuamente promovemos su preparación en certificaciones de alto impacto.</p>
-        <p class="text-justify">
-            Certificaciones en : Sun Certified Web Componet Developer Java 2 Platform Sun Certificed Programmer for the Java 5 Platform Microsoft Certified Technology Specialist Cisco Certified Network Associate Cisco Certified Network Professional Comptia Security+ Fortinet Certified Network Security Professional Manejo de Herramientas en : Public Key Infraestructure IBM Websphere Microsoft .NET Plataform Oracle Solaris / Unix Perl , ANSI C / C++ Eclipse , Spring , Struts , Tapestry , Etc.
-        </p>
-    </div><hr>
 </div>
 
 <!--FOOTER-->
